--- a/cardio.ipynb
+++ b/cardio.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -69,7 +69,7 @@
        "(70000, 13)"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -201,7 +201,7 @@
        "2       1              0              0              1       1       0       0  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -213,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -222,7 +222,7 @@
        "(17,)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -233,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -277,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -294,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -303,7 +303,7 @@
        "1234"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -314,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -323,7 +323,7 @@
        "(1537, 16)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -334,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -343,7 +343,7 @@
        "(1439, 16)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -354,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -363,7 +363,7 @@
        "(1114, 16)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -382,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -395,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -408,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -417,7 +417,7 @@
        "(60142, 16)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -428,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -452,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -462,7 +462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -587,7 +587,7 @@
        "2  23.507805  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -598,7 +598,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -629,7 +629,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -754,7 +754,7 @@
        "2  23.507805  "
       ]
      },
-     "execution_count": 18,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -765,7 +765,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -775,16 +775,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1a1bbd9a50>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1a1e665310>"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -807,7 +807,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -816,7 +816,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -981,7 +981,7 @@
        "64308  34.894399  "
       ]
      },
-     "execution_count": 22,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -992,7 +992,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1005,7 +1005,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -1045,7 +1045,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -1090,7 +1090,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -1120,7 +1120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -1165,7 +1165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -1210,7 +1210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -1257,7 +1257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -1298,30 +1298,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Best Citerion: entropy\n",
-      "Best n_estimator: 18\n",
-      "Best min_sample_splits: 4\n",
+      "Best Citerion: gini\n",
+      "Best n_estimator: 12\n",
+      "Best min_sample_splits: 8\n",
       "Best max_depth: 9\n",
-      "Precision 0.6424366872005476\n",
-      "Accuracy 0.7258579409417398\n",
-      "AUC_ROC 0.7304300649271518\n",
-      "[[6221 1510]\n",
-      " [2612 4693]]\n",
-      "0.9721342333064367\n"
+      "Precision 0.6466803559206024\n",
+      "Accuracy 0.724926842245278\n",
+      "AUC_ROC 0.728806730057903\n",
+      "[[6176 1555]\n",
+      " [2581 4724]]\n",
+      "0.9712026534743348\n"
      ]
     }
    ],
@@ -1356,23 +1349,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Best Citerion: gini\n",
-      "Best n_estimator: 18\n",
-      "Best min_sample_splits: 3\n",
+      "Best Citerion: entropy\n",
+      "Best n_estimator: 12\n",
+      "Best min_sample_splits: 8\n",
       "Best max_depth: 9\n",
-      "Precision 0.6516084873374401\n",
-      "Accuracy 0.7239292364990689\n",
-      "AUC_ROC 0.7270906643968226\n",
-      "[[6125 1606]\n",
-      " [2545 4760]]\n",
-      "0.9721342333064367\n"
+      "Precision 0.6309377138945927\n",
+      "Accuracy 0.7230646448523543\n",
+      "AUC_ROC 0.7287534974340442\n",
+      "[[6263 1468]\n",
+      " [2696 4609]]\n",
+      "0.9712026534743348\n"
      ]
     }
    ],
@@ -1407,16 +1400,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[6125 1606]\n",
-      " [2545 4760]]\n",
-      "0.9721342333064367\n",
+      "[[6263 1468]\n",
+      " [2696 4609]]\n",
+      "0.9712026534743348\n",
       "Precision 0.6265571526351814\n",
       "Accuracy 0.7214019686086726\n",
       "AUC_ROC 0.7274269884861241\n"
